--- a/resources/src/sass/_buttons.scss
+++ b/resources/src/sass/_buttons.scss
@@ -90,6 +90,9 @@
   margin-left: 8px;
   vertical-align: middle;
   display: inline;
+  position: relative;
+  top: -15px;
+  right: -15px;
 }
 
 .btn-reset {
