--- a/resources/src/sass/_card.scss
+++ b/resources/src/sass/_card.scss
@@ -23,6 +23,8 @@
         padding: 1px 7px;
         margin: 0 0 7px 0;
         font-weight: bold;
+        top: -8px;
+        position: relative;
         cursor: pointer;
             &-twitter {
                 background-color: #00C6FF;
